# robot

./: .gitignore  LICENSE  README.md  analysis_plan.md  pyproject.toml  requirements.txt
data/: data.xlsx
outputs/: paper.md  paper_context.json  paper_prompt.md
prompts/: paper_prompt_template.md
scripts/: generate_paper.py  visualize.py
src/robot_analysis/: __init__.py  cli.py
tests/: test_import.py
