[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-analysis"
version = "0.1.0"
description = "Panel-data helper tools for exploring robot penetration and global value chain positioning."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Zhangsi2"}
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "statsmodels>=0.13",
  "openpyxl>=3.1",
  "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
robot-analysis = "robot_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
